manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "web"
  # labels:
  #   name: "web-sand
