manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 10 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: web
    spec:

      volumes:
        - name: env-conf
          configMap:
            name: env-conf-argocd
      containers:
      - name: php
        image: php:7.1.33-apache-buster
        command: ["/bin/bash"]
        tty: true
        # resources:
        #   limits:
        #     memory: "20Mi"
        #     cpu: "0.5"



      - name: nginx
        image: nginx:1.21.0
        ports:
        - containerPort: 80
        # resources:
        #   limits:
        #     memory: "20Mi"
        #     cpu: "0.5"

        volumeMounts:
          - mountPath: /root/config.txt
            name: env-conf
            subPath: config.txt
