manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: web
  # labels:
  #   run: web-svc
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: web
