manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "360"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "stickounet"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/proxy-body-size: 120m
spec:
  defaultBackend:
    service:
      name: web-svc
      port:
        number: 8100
  # tls:
  # - hosts:
  #   - web-argocd.kube-test.therealpbx.co.in
  #   secretName: tatateleservices-new-tls
  rules:
  - host: web-argocd.kube-test.therealpbx.co.in
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: web-svc
            port:
              number: 8100
